--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "gcmoony",
-    "email": "geo9114@gmail.com"
+    "name": "gcmoony"
   },
   "license": "MIT",
   "dependencies": {
