--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.3",
+    "@mui/x-data-grid": "^7.20.0",
+    "@mui/x-data-grid-generator": "^7.21.0",
     "better-sqlite3": "^11.3.0",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
